--- a/src/android/mupdf.gradle
+++ b/src/android/mupdf.gradle
@@ -10,6 +10,10 @@ dependencies {
 }
 
 android {
+    defaultConfig {
+        minSdkVersion 16
+    }
+
     packagingOptions {
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE'
