--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/davearata/cordova-plugin-mupdf.git"
+    "url": "git+https://github.com/chancezeus/cordova-plugin-mupdf.git"
   },
-  "author": "",
+  "author": "Mark van Beek <mark@appelit.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/davearata/cordova-plugin-mupdf/issues"
+    "url": "https://github.com/chancezeus/cordova-plugin-mupdf/issues"
   },
-  "homepage": "https://github.com/davearata/cordova-plugin-mupdf#readme",
+  "homepage": "https://github.com/chancezeus/cordova-plugin-mupdf#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
-  }
+  },
+  "keywords": [
+    "cordova",
+    "mupdf",
+    "pdf",
+    "android",
+    "ecosystem:cordova",
+    "cordova-ios",
+    "cordova-android"
+  ]
 }
