--- a/plugin.xml
+++ b/plugin.xml
@@ -23,7 +23,7 @@
             </feature>
         </config-file>
 
-        <framework src="MuPDF" type="podspec" />
+        <framework src="MuPDF" type="podspec" spec="~> 1.10"/>
 
         <source-file src="src/ios/MuPdfPlugin.m"/>
         <header-file src="src/ios/MuPdfPlugin.h"/>
@@ -41,8 +41,8 @@
             </feature>
         </config-file>
 
-        <framework src="src/android/mupdf.gradle" custom="true" type="gradleReference" />
-        <resource-file src="src/android/mupdf-plugin.aar" target="libs/mupdf-plugin.aar" />
+        <framework src="src/android/mupdf.gradle" custom="true" type="gradleReference"/>
+        <resource-file src="src/android/mupdf-plugin.aar" target="libs/mupdf-plugin.aar"/>
         <source-file src="src/android/MuPdfPlugin.java" target-dir="src/com/artifex/mupdfdemo"/>
     </platform>
 </plugin>
